# restaurant-reviews

./: README.md  pyproject.toml  restaurant.csv
restaurant_reviews/: main.py
